// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeline renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Picasso-root"
    >
      <div
        class="PicassoTimeline-root"
      >
        <div
          class="flex PicassoTimelineRow-root PicassoTimelineRow-tableRow"
        >
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mr-6 items-center flex flex-col PicassoTimelineRow-tableCellContent"
            >
              <div
                class="PicassoTimelineRow-dot"
                data-testid="dot"
              />
              <div
                class="PicassoTimelineRow-connector"
              />
            </div>
          </div>
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mb-8 PicassoTimelineRow-content"
            >
              Row #1
            </div>
          </div>
        </div>
        <div
          class="flex PicassoTimelineRow-root PicassoTimelineRow-tableRow"
        >
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mr-6 items-center flex flex-col PicassoTimelineRow-tableCellContent"
            >
              <div
                class="PicassoTimelineRow-dot"
                data-testid="dot"
              />
              <div
                class="PicassoTimelineRow-connector"
              />
            </div>
          </div>
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mb-8 PicassoTimelineRow-content"
            >
              Row #2
            </div>
          </div>
        </div>
        <div
          class="flex PicassoTimelineRow-root PicassoTimelineRow-tableRow"
        >
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mr-6 items-center flex flex-col PicassoTimelineRow-tableCellContent"
            >
              <div
                class="PicassoTimelineRow-dot"
                data-testid="dot"
              />
              <div
                class="PicassoTimelineRow-connector"
              />
            </div>
          </div>
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mb-8 PicassoTimelineRow-content"
            >
              Row #3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Timeline renders with dates 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Picasso-root"
    >
      <div
        class="PicassoTimeline-root"
      >
        <div
          class="flex PicassoTimelineRow-root PicassoTimelineRow-tableRow"
        >
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mr-6 items-center flex flex-col PicassoTimelineRow-tableCellContent"
            >
              <div
                class="PicassoTimelineRow-dot"
              />
              <div
                class="PicassoTimelineRow-connector"
              />
            </div>
          </div>
          <div
            class="PicassoTimelineRow-tableCell"
            style="white-space: nowrap;"
          >
            <div
              class="mr-8 PicassoTimelineRow-date"
            >
              <p
                class="m-0 text-md text-graphite font-semibold leading-6"
              >
                25.06.2021
              </p>
            </div>
          </div>
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mb-8 PicassoTimelineRow-content"
            >
              Row #1
            </div>
          </div>
        </div>
        <div
          class="flex PicassoTimelineRow-root PicassoTimelineRow-tableRow"
        >
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mr-6 items-center flex flex-col PicassoTimelineRow-tableCellContent"
            >
              <div
                class="PicassoTimelineRow-dot"
              />
              <div
                class="PicassoTimelineRow-connector"
              />
            </div>
          </div>
          <div
            class="PicassoTimelineRow-tableCell"
            style="white-space: nowrap;"
          >
            <div
              class="mr-8 PicassoTimelineRow-date"
            >
              <p
                class="m-0 text-md text-graphite font-semibold leading-6"
              >
                25.06.2022
              </p>
            </div>
          </div>
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mb-8 PicassoTimelineRow-content"
            >
              Row #2
            </div>
          </div>
        </div>
        <div
          class="flex PicassoTimelineRow-root PicassoTimelineRow-tableRow"
        >
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mr-6 items-center flex flex-col PicassoTimelineRow-tableCellContent"
            >
              <div
                class="PicassoTimelineRow-dot"
              />
              <div
                class="PicassoTimelineRow-connector"
              />
            </div>
          </div>
          <div
            class="PicassoTimelineRow-tableCell"
            style="white-space: nowrap;"
          >
            <div
              class="mr-8 PicassoTimelineRow-date"
            >
              <p
                class="m-0 text-md text-graphite font-semibold leading-6"
              >
                25.06.2023
              </p>
            </div>
          </div>
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mb-8 PicassoTimelineRow-content"
            >
              Row #3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Timeline renders with icons 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Picasso-root"
    >
      <div
        class="PicassoTimeline-root"
      >
        <div
          class="flex PicassoTimelineRow-root PicassoTimelineRow-tableRow"
        >
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mr-6 items-center flex flex-col PicassoTimelineRow-tableCellContent"
            >
              <span
                class="PicassoTimelineRow-icon"
                data-testid="icon-1"
              />
              <div
                class="PicassoTimelineRow-connector"
              />
            </div>
          </div>
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mb-8 PicassoTimelineRow-content"
            >
              Row #1
            </div>
          </div>
        </div>
        <div
          class="flex PicassoTimelineRow-root PicassoTimelineRow-tableRow"
        >
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mr-6 items-center flex flex-col PicassoTimelineRow-tableCellContent"
            >
              <span
                class="PicassoTimelineRow-icon"
                data-testid="icon-2"
              />
              <div
                class="PicassoTimelineRow-connector"
              />
            </div>
          </div>
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mb-8 PicassoTimelineRow-content"
            >
              Row #2
            </div>
          </div>
        </div>
        <div
          class="flex PicassoTimelineRow-root PicassoTimelineRow-tableRow"
        >
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mr-6 items-center flex flex-col PicassoTimelineRow-tableCellContent"
            >
              <span
                class="PicassoTimelineRow-icon"
                data-testid="icon-3"
              />
              <div
                class="PicassoTimelineRow-connector"
              />
            </div>
          </div>
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mb-8 PicassoTimelineRow-content"
            >
              Row #3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Timeline renders without a connector 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Picasso-root"
    >
      <div
        class="PicassoTimeline-root"
      >
        <div
          class="flex PicassoTimelineRow-root PicassoTimelineRow-tableRow"
        >
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mr-6 items-center flex flex-col PicassoTimelineRow-tableCellContent"
            >
              <div
                class="PicassoTimelineRow-dot"
                data-testid="dot"
              />
              <div
                class="PicassoTimelineRow-connector"
                data-testid="connector"
              />
            </div>
          </div>
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mb-8 PicassoTimelineRow-content"
            >
              Row #1
            </div>
          </div>
        </div>
        <div
          class="flex PicassoTimelineRow-root PicassoTimelineRow-tableRow"
        >
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mr-6 items-center flex flex-col PicassoTimelineRow-tableCellContent"
            >
              <div
                class="PicassoTimelineRow-dot"
                data-testid="dot"
              />
              <div
                class="PicassoTimelineRow-connector"
                data-testid="connector"
              />
            </div>
          </div>
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mb-8 PicassoTimelineRow-content"
            >
              Row #2
            </div>
          </div>
        </div>
        <div
          class="flex PicassoTimelineRow-root PicassoTimelineRow-tableRow"
        >
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mr-6 items-center flex flex-col PicassoTimelineRow-tableCellContent"
            >
              <div
                class="PicassoTimelineRow-dot"
                data-testid="dot"
              />
            </div>
          </div>
          <div
            class="PicassoTimelineRow-tableCell"
          >
            <div
              class="mb-8 PicassoTimelineRow-content"
            >
              Row #3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
